Really filled in on Gps and Time

--- a/essay_kladd.tex
+++ b/essay_kladd.tex
@@ -71,7 +71,7 @@ In fields like emergency response, search and rescue, fleet management and even 
 The method used by your GPS receiver to determine its position is called \textit{trilateration}. 
 Trilateration is used in geometry as a process of determining the location (absolute or relative) of point by measuring distance. It is often confused with triangulation which instead of distance, uses angles. Measuring the distance from the GPS satellites to a given position on earth is quite simple when using the equation: 
 \begin{equation} Distance = Rate \times Time \end{equation} 
-The equation is simple to solve, first we need the rate. In this context, the \textit{rate} is how fast the signals travel. This is equal to the speed of light (299,792,458 m/s). The time the signal has used traveling from the satellite to earth can be obtained by analyzing the signal itself. The signal contains a time stamp of when the signal was sent. By comparing this time stamp with the current time, one can calculate the age of the signal and therefore how long it has spent traveling. \cite{GPSGOVTE}  
+The equation is simple to solve, first we need the rate. In this context, the \textit{rate} is how fast the signals travel. This is equal to the speed of light (299,792,458 m/s). The time the signal has used traveling from the satellite to earth can be obtained by analyzing the signal itself. The signal contains a "time stamp" of when the signal was sent. By comparing this time stamp with the current time, one can calculate the age of the signal and therefore how long it has spent traveling. This is explained in greater detail under (\ref{GST}) \cite{GPSGOVTE}.  
 
 \section{Clocks}
 What does a \$10 wristwatch and a \$100 000 atomic clock have in common? They both drift. This phenomena known as \textit{clock drift}, is when a clock no longer runs at the exact same speed as a reference clock and they drift apart.
@@ -84,8 +84,8 @@ What does a \$10 wristwatch and a \$100 000 atomic clock have in common? They bo
 This property is a result of how they track time. In essence, all clocks work in the same way. They have a part that oscillates, a way to count the number of oscillations and a way to show the count. If we transfer this analogy to the typical "grandfather clock", the pendulum would be the oscillator, the counting mechanism the clockwork and the clock face and dials would be the display. In a typical wristwatch, the oscillator is a quartz crystal powered by a battery. The frequency of which the crystal oscillates is then divided down to a single Hertz by simple electronics. The purity of the crystal is among the decisive factors determining the accuracy of the clock. \cite{CSMG}. 
 Although a completely different beast, the same principles apply to the atomic clock which uses the microwave radiation that electrons in atoms emit when they change energy levels. One of the most commonly used elements in atomic clocks, is \textit{caesium-133}, an isotope of caesium.\footnote{1 second equals 9,192, 631,770 cycles of the Cs-133 transition} \cite{HP}. Bear in mind that this is of course an extremely limited explanation.
 
-\section{GPS and Time}
-During the introduction of this essay the properties of GPS as a tool for navigation was made apparent. This is however not the only use of GPS. On board of each GPS satellite there are several atomic clocks. The clocks are synchronized with each other and also with clocks on Earth. FILL IN HERE! Write about C/A and P(Y)!
+\section{GPS signals and Time}\label{GST}
+During the introduction of this essay the properties of GPS as a tool for navigation was made apparent. This is however not the only use of GPS, it is also used for timing. The GPS satellites transmits a \textit{Coarse/Acquisition (C/A)} code and a restricted \textit{Precision (P)} code. The C/A code is freely open for everyone and is transmitted at the L1 carrier frequency (1575.42 MHz) and the P code is transmitted at both L1 and L2 (1227.60 MHz), P is reserved for the military. The C/A code is a 1023 bit pseudo random code that is transmitted at 1.023 Mbit/s, which means it repeats itself every millisecond. Each satellite transmits a different pseudo random code, codes that does not correlate well with each other. This is important because it makes it possible to separate the satellites from each other. The way the receiver calculates the distance from itself to the satellites is by comparing the pseudo random code received from the satellite with an identical one it generates itself. The receiver "slides" these codes over each other further and further until they match up. The signals travel time is determined by how far the codes have to be slided. This is what is called \textit{Code-phase GPS} and it has got some problems. Since the code have a wide cycle width, almost a microsecond, there is a lot of slop and at the speed of light, a microsecond is roughly 300 meters. What many receivers do is that they start with the code-phase and moves on to using measurements based on the carrier frequency. Since the frequency is much higher, the slop decreases and the accuracy increases dramatically. This is whats known as \textit{Carrier-phase GPS}. 
 
 \section{Phasor Measurement Units}
 An example of an application relying on GPS derived time is a PMU (phasor measurement unit).A PMU analyzes the waves on the electrical grid and uses a common time source for synchronization. This synchronization allows for real-time measurements between multiple points in the grid by multiple PMU's. The common time source (and why PMU's are relevant) is often obtained by using GPS. \cite{YLJRNR} The value of such a device is understood clearer by recognizing that the power grid is a complex, interconnected, interdependent network. In other words, errors and abnormalities in one part of the grid will have an effect on operation elsewhere and in some cases lead to whole spread blackouts \cite{EVPMUGA}.
@@ -131,8 +131,10 @@ When under a data-level spoofing attack (\ref{dls}), the navigation data is modi
 \subsubsection{Comparing navigation data and reverse-calculated satellite positions} %[C6]
 The PMU GPS receivers are never moved and their position is known. By using their pseudorange measurements, the satellites positions can be reverse calculated by using trilateration. Since the reverse-calculated positions only match the positions calculated from the navigation data when both pseudorange and navigation data is correct, one can effectively detect replay spoofing (\ref{rs}) and malfunctions (\ref{mf}). Its also worth noting that this countermeasure increases the difficulty of both signal and data-level spoofing (\ref{dls},\ref{sls}) because it narrows down the possible valid (seemingly) spoofing signals. \cite{HengChouGao14} 
 
-\subsubsection{Cross-correlating P(Y) code}
+\subsubsection{Cross-correlating P(Y) code} %[C2]
 This countermeasure assumes two receivers with at least 1 km distance from each other that tracks a signal from a satellite visible to them both. It is also based on the assumption that the encrypted military P(Y) code cannot be forged by a spoofer. The receivers can use the C/A code phase and timing relationships to the P(Y) code to obtain two samples from the same time frame of the received P(Y) code and then correlate the two samples. Even though the samples will be encrypted, noisy and perhaps distorted by narrow-band RF front-end, a high correlation peak should be created when a cross-correlation is conducted as long as the receivers are not spoofed. A key conclusion of the research made by L. Heng (2013) as referenced by L. Heng \textit{et alia} (2014) was that the probability of detection errors using this method decreased exponentially with the length of the samples made from the P(Y) code and the number of receivers used as reference. This method has therefore proved itself effective against spoofing attacks (\ref{dls},\ref{sls}), but ineffective against replay spoofing because the rebroadcast uses authentic GPS signals with correct P(Y) code. It is important to note that the implementation of this countermeasure relies on the GPS receivers ability to output baseband samples and that these samples are able to transfer over data network. Because the sampling rate of the samples are fairly high, it is recommended that the spoofing detection is done periodically instead of continuously. \cite{HengChouGao14}  
+
+
 \newpage
 \printbibliography[title={Complete Bibliography},heading=bibintoc]
 
