--- a/refs.bib
+++ b/refs.bib
@@ -35,7 +35,7 @@
   year = 2000,
   volume = 33,
   pages = "477-497",
-  url = {\url{http://www.ieee-uffc.org/main/history/step.pdf}}
+  url = {www.ieee-uffc.org/main/history/step.pdf}
 }
 
 @misc{NATINT,
@@ -99,6 +99,14 @@
   url = {http://tcipg.org/sites/default/files/papers/2012_Q2_CPR2.pdf},
   year = 2012
 }
+
+@misc{TRIMBLE,
+  author = "Trimble Navigation Limited",
+  title = {Trimble GPS Tutorial - Getting perfect timing},
+  howpublished = {\url{http://www.trimble.com/gps_tutorial/howgps-timing2.aspx}},
+  note = {Accessed: 18-05-2015}
+}
+
 
 
 
