Made some small corrections

--- a/refs.bib
+++ b/refs.bib
@@ -35,7 +35,7 @@
   year = 2000,
   volume = 33,
   pages = "477-497",
-  url = {www.ieee-uffc.org/main/history/step.pdf}
+  url = {\url{www.ieee-uffc.org/main/history/step.pdf}}
 }
 
 @misc{NATINT,
@@ -48,7 +48,7 @@
 @misc{GISTRILATERATE,
   author = "GIS Commons",
   howpublished = {\url{http://giscommons.org/files/2010/01/2.141.gif}},
-  url = {http://giscommons.org/chapter-2-input/},
+  url = {\url{http://giscommons.org/chapter-2-input/}},
   note = {Licenced under CC BY-SA 3.0 \url{http://creativecommons.org/licenses/by-sa/3.0/}}
 }
 
@@ -83,7 +83,7 @@
 @misc{DENCES,
   author = "Dennis S.K",
   howpublished = {\url{http://en.wikipedia.org/wiki/Caesium}},
-  url = {http://commons.wikimedia.org/wiki/User:Dnn87#/media/File:CsCrystals1.JPG},
+  url = {\url{http://commons.wikimedia.org/wiki/User:Dnn87#/media/File:CsCrystals1.JPG}},
   note = {Licenced under CC BY-SA 3.0 \url{http://creativecommons.org/licenses/by-sa/3.0/}}
 }
 
@@ -96,13 +96,13 @@
 @article{SGRCOOPMU,
   author = "Xichen Jiang",
   title = "SPOOFING GPS RECEIVER CLOCK OFFSET OF PHASOR MEASUREMENT UNITS",
-  url = {http://tcipg.org/sites/default/files/papers/2012_Q2_CPR2.pdf},
+  url = {\url{tcipg.org/sites/default/files/papers/2012_Q2_CPR2.pdf}},
   year = 2012
 }
 
-@misc{TRIMBLE,
+@misc{TRIMBLETIME,
   author = "Trimble Navigation Limited",
-  title = {Trimble GPS Tutorial - Getting perfect timing},
+  title = {Trimble GPS Tutorial Getting perfect timing},
   howpublished = {\url{http://www.trimble.com/gps_tutorial/howgps-timing2.aspx}},
   note = {Accessed: 18-05-2015}
 }
