--- a/essay_kladd.tex
+++ b/essay_kladd.tex
@@ -12,6 +12,7 @@
 \usepackage{lettrine}
 \usepackage[font={small,it}]{caption}
 \usepackage{multirow}
+\usepackage{tabularx}
 
 \usepackage[
     backend=biber,
@@ -138,21 +139,26 @@ This countermeasure assumes two receivers with at least 1 km distance from each 
 \subsubsection{Multi-receiver tracking loops}\label{mrtl}
 
 \subsection{Summary}
-
 \begin{table}[h]
-\begin{tabular}{|l|c|c|c|c|c|}
-\hline
-\multicolumn{1}{|c|}{\multirow{2}{*}{Counter Measures}} & \multicolumn{5}{c|}{Threat Models} \\ \cline{2-6} 
-\multicolumn{1}{|c|}{} & \multicolumn{1}{l|}{\ref{jam} \newline Jamming} & \multicolumn{1}{r|}{\ref{dls} Data-level spoofing} & \multicolumn{1}{l|}{\ref{sls} Signal-level spoofing} & \multicolumn{1}{l|}{\ref{rs} Replay spoofing} & \multicolumn{1}{l|}{\ref{mf} Accidental receiver errors} \\ \hline
-\ref{msp} Monitoring Signal Power & N & X & X & X & N \\ \hline
-\ref{ccpc} Cross-correlating P(Y) & N & Y & Y & N & N \\ \hline
-\ref{ptl} PIA TL & Y & N & N & Y & N \\ \hline
-\ref{mrtl} Multi-receiver TL & Y & X & X & X & X \\ \hline
-\ref{ccndar} Checking nav. data & X & Y & N & N & Y \\ \hline
-\ref{cndrcsp} Reverse calculated sat. pos. & N & X & X & Y & Y \\ \hline
-\ref{cspakp} Check pos. solution & N & Y & Y & Y & Y \\ \hline
-\ref{ctsarcs} Check time solutions & N & X & X & X & X \\ \hline
-\end{tabular}
+  \begin{tabular}{|l|c|c|c|c|c|} \hline
+  \multicolumn{1}{|c|}{\multirow{2}{*}{Counter Measures}} &
+  \multicolumn{5}{c|}{Threat Models} \\ \cline{2-6} 
+    \multicolumn{1}{|c|}{} & 
+    \multicolumn{1}{l|}{\vtop{\hbox{\strut \ref{jam}}\hbox{\strut{JAM}}}} &
+    \multicolumn{1}{l|}{\vtop{\hbox{\strut \ref{sls}}\hbox{\strut{SLS}}}} & 
+    \multicolumn{1}{r|}{\vtop{\hbox{\strut \ref{dls}}\hbox{\strut{DLS}}}} & 
+    \multicolumn{1}{l|}{\vtop{\hbox{\strut \ref{rs}}\hbox{\strut{RS}}}} & 
+    \multicolumn{1}{l|}{\vtop{\hbox{\strut \ref{mf}}\hbox{\strut{MF}}}}\\ 
+    \hline
+    \ref{msp}          Monitoring Signal Power & N & X & X & X & N \\ \hline
+    \ref{cspakp}           Check pos. solution & N & Y & Y & Y & Y \\ \hline
+    \ref{ctsarcs}         Check time solutions & N & X & X & X & X \\ \hline
+    \ref{ccndar}            Checking nav. data & X & N & Y & N & Y \\ \hline
+    \ref{cndrcsp} Reverse calculated sat. pos. & N & X & X & Y & Y \\ \hline
+    \ref{ccpc}          Cross-correlating P(Y) & N & Y & Y & N & N \\ \hline
+    \ref{ptl}                           PIA TL & Y & N & N & Y & N \\ \hline
+    \ref{mrtl}               Multi-receiver TL & Y & X & X & X & X \\ \hline
+  \end{tabular}
 \end{table}
  
 \newpage
